--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,6 +7,8 @@
     <string name="false_button">False</string>
     <string name="next_question_button">Next</string>
     <string name="next_button">Next</string>
+    <string name="prev_question_button">Prev</string>
+    <string name="prev_button">Prev</string>
     <string name="correct_toast">Correct!</string>
     <string name="incorrect_toast">Incorrect!</string>
     <string name="action_settings">Settings</string>
